<resources>
    <string name="app_name">CodeFun</string>
    <string name="dashboard">Dashboard</string>
    <string name="get_news_feed">Get News Feed</string>
    <string name="author">Author :</string>
    <string name="title">Title :</string>
    <string name="description">Description :</string>
    <string name="published_date">Published Date :</string>
    <string name="content">Content :</string>

    <string name="ssl_certificate_invalid">This doesn\'t seem to be a secure URL. Do you wish to continue?</string>

    <string name="ans">Ans</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">Submit</string>
    <string name="total_quiz_ques">Total Quiz Ques</string>
    <string name="total_attempted_ques">Total Attempted Ques</string>
    <string name="total_score">Total Score</string>
    <string name="java_score">Java Score</string>
    <string name="ok">OK</string>

</resources>
