<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/margin_padding_20dp"
    android:paddingTop="@dimen/margin_padding_20dp"
    android:paddingEnd="@dimen/margin_padding_20dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/score_title"
        android:text="@string/java_score"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/ok_btn"
        android:layout_marginTop="@dimen/margin_padding_20dp"
        android:layout_marginBottom="@dimen/margin_padding_20dp"
        android:background="@drawable/button_bg"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        android:textColor="@color/colorWhite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="@dimen/margin_padding_10dp"
        android:paddingStart="@dimen/margin_padding_20dp"
        android:paddingEnd="@dimen/margin_padding_20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/total_quiz_ques"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/total_attempted_ques"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:text="@string/total_score"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="@dimen/margin_padding_32dp"
            android:paddingEnd="0dp"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/total_no_ques_value"
                android:text="20"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/total_attempted_value"
                android:text="18"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/total_score_value"
                android:text="18/20"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>